Fix task list overflow bug; add custom webkit scrollbar; alter completed task card style

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,22 @@
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 0.5vmin;
+	background-color: rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+::-webkit-scrollbar-thumb:active {
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
 .container {
+	user-select: none;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -12,8 +30,8 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	width: 40%;
-	height: 75%;
+	width: 600px;
+	height: 750px;
 	border-radius: 3vmin;
 }
 
@@ -27,10 +45,10 @@
 	display: block;
 	width: 60%;
 	height: 100%;
+	overflow: auto;
 }
 
 .todo {
-	user-select: none;
 	padding: 6px 12px;
 	transition: all 0.2s ease;
 	cursor: pointer;
@@ -44,6 +62,7 @@
 .text-input-group {
 	position: relative;
 	width: 60%;
+	margin: 24px 0 0 0;
 }
 
 .text-input {
